# cookiecutter-python-app

./: README.md  cookiecutter.json
cookiecutter.project_name/: README.md  mkdocs.yml
cookiecutter.project_name/.github/workflows/: ci.yml
cookiecutter.project_name/docs/: usage.md
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  dev-requirements.txt  mkdocs.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/docs/: index.md  usage.md
{{cookiecutter.project_name}}/docs/tutorial/: tut01.py
