[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = ["Özcan Yarımdünya <ozcanyd@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://ozcanyarimdunya.github.io/{{cookiecutter.project_name}}/"
repository = "https://github.com/ozcanyarimdunya/{{cookiecutter.project_name}}"
documentation = "https://ozcanyarimdunya.github.io/{{cookiecutter.project_name}}/"
keywords = ["{{cookiecutter.project_name}}"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "{{cookiecutter.project_name}}" },
]
include = ["LICENCE"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
mdx-include = "^1.4.1"
pre-commit = "^2.18.1"

[tool.black]
line_length = 120
experimental_string_processing = true

[tool.isort]
profile = "black"
ensure_newline_before_comments = true
line_length = 120
force_single_line = true
force_alphabetical_sort_within_sections = true
